--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
+<!-- Open Graph / Link Preview -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="TapValues">
+    <meta property="og:description" content="Tap Simulator Valuelist by NotSpeedGuy and Astarte!">
+    <meta property="og:image" content="https://tap-invalues.github.io/hydra.png">
+    <meta property="og:url" content="https://tap-invalues.github.io">
+    <meta name="theme-color" content="#6f4cff">
+  
   <title>Tap Simulator | Value List</title>
   <link rel="stylesheet" href="style.css">
 
