--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
 <!-- Open Graph / Link Preview -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="TapValues">
-    <meta property="og:description" content="Tap Simulator Valuelist by NotSpeedGuy and Astarte!">
+    <meta property="og:title" content="Tap-in Values 👆">
+    <meta property="og:description" content="Modern Tap Simulator valuelist made & managed with ❤️ by sTucKeD. 'For the tappers, by the tappers' ">
     <meta property="og:image" content="https://tap-invalues.github.io/hydra.png">
     <meta property="og:url" content="https://tap-invalues.github.io">
     <meta name="theme-color" content="#6f4cff">
