--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Tap-in Values 👆">
     <meta property="og:description" content="Modern Tap Simulator valuelist made & managed with ❤️ by sTucKeD. 'For the tappers, by the tappers' ">
-    <meta property="og:image" content="https://tap-invalues.github.io/hydra.png">
+    <meta property="og:image" content="https://tap-invalues.github.io/banner.jpeg">
     <meta property="og:url" content="https://tap-invalues.github.io">
     <meta name="theme-color" content="#6f4cff">
   
