--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Tap-in Values 👆">
     <meta property="og:description" content="Modern Tap Simulator valuelist made & managed with ❤️ by sTucKeD. 'For the tappers, by the tappers' ">
-    <meta property="og:image" content="https://tap-invalues.github.io/banner.jpeg">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1449713910956691458/1457461546253943035/image.png?ex=695c1656&is=695ac4d6&hm=95b608bdfd446152bf1973f66f79e1b619cdfef00f7c6a3c33e7dbc7383d3a01&=&format=webp&quality=lossless&width=512&height=350">
     <meta property="og:url" content="https://tap-invalues.github.io">
     <meta name="theme-color" content="#6f4cff">
   
