--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!-- Main Content -->
 <div class="main">
   <div class="warning-note">
- UPDATE - Added new pets <br>DM sTucKeD if you have any suggestions / query
+ <b>UPDATE</b> - Updated values for many pets.
 </div>
   <!-- Header -->
   <header>
