--- a/robux2.html
+++ b/robux2.html
@@ -164,19 +164,19 @@
 
       <div class="info">
         <p>Normal <span class="badge risingg">RISING</span></p>
-        <p class="value">2200</p>
+        <p class="value">2700</p>
         <p>Demand: <span class="score">9/10</span></p>
       </div>
 
       <div class="info rainbow">
         <p>Golden <span class="badge risingg">RISING</span></p>
-        <p class="value">8200</p>
+        <p class="value">9500+</p>
         <p>Demand: <span class="score">9/10</span></p>
       </div>
 
       <div class="info golden">
         <p>Rainbow <span class="badge risingg">RISING</span></p>
-        <p class="value">10000+</p>
+        <p class="value">O/C</p>
         <p>Demand: <span class="score">10/10</span></p>
       </div>
     </div>
