--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
       <h3>2026 Balloons</h3>
 
       <div class="info"> 
-        <p>Normal <span class="badge risingy">STABLE</span></p>
+        <p>Normal <span class="badge risingg">RISING</span></p>
         <p class="value">105</p>
         <p>Demand: <span class="score">7/10</span></p>
       </div>
 
       <div class="info rainbow">
-        <p>Golden <span class="badge risingy">STABLE</span></p>
+        <p>Golden <span class="badge risingg">RISING</span></p>
         <p class="value">400</p>
         <p>Demand: <span class="score">7/10</span></p>
       </div>
 
       <div class="info golden">
-        <p>Rainbow <span class="badge risingy">STABLE</span></p>
+        <p>Rainbow <span class="badge risingg">RISING</span></p>
         <p class="value">450</p>
         <p>Demand: <span class="score">7/10</span></p>
       </div>
