--- a/christsecret.html
+++ b/christsecret.html
@@ -89,19 +89,19 @@
       <h3>Gilded Seraphim</h3>
 
       <div class="info"> 
-        <p>Normal <span class="badge risingg">RISING</span></p>
+        <p>Normal <span class="badge risingy">STABLE</span></p>
         <p class="value">950</p>
         <p>Demand: <span class="score">9/10</span></p>
       </div>
 
       <div class="info rainbow">
-        <p>Golden <span class="badge risingg">RISING</span></p>
+        <p>Golden <span class="badge risingy">STABLE</span></p>
         <p class="value">3700</p>
         <p>Demand: <span class="score">9/10</span></p>
       </div>
 
       <div class="info golden">
-        <p>Rainbow <span class="badge risingg">RISING</span></p>
+        <p>Rainbow <span class="badge risingy">STABLE</span></p>
         <p class="value">4200</p>
         <p>Demand: <span class="score">9/10</span></p>
       </div>
