--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!-- Main Content -->
 <div class="main">
   <div class="warning-note">
- <b>UPDATE</b> - Updated values for many pets.
+ You can give us any suggestions to improve for you guys; it takes time to prove ourselves. <3
 </div>
   <!-- Header -->
   <header>
