--- a/lb.html
+++ b/lb.html
@@ -133,7 +133,7 @@
 
       <div class="info"> 
         <p>Normal <span class="badge risingy">STABLE</span></p>
-        <p class="value">12000</p>
+        <p class="value">13000+</p>
         <p>Demand: <span class="score">9/10</span></p>
       </div>
 
